force-app/main/default/objects/Trip__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>IF( OR( NOT(ISBLANK(Contact__c)) , NOT( ISBLANK(PrefferedTripStart__c))), 
  Contact__r.FirstName + &apos; &apos; +  Contact__r.LastName  + &apos; &apos; +   TEXT(PrefferedTripStart__c) , 
  &quot;Contact and date not filled&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>