force-app/main/default/objects/Trip__c/fields/PrefferedTripStart__c.field-meta.xml
<CustomField>
    <fullName>PrefferedTripStart__c</fullName>
    <label>Preffered Trip Start</label>
    <type>Date</type>
</CustomField>