force-app/main/default/objects/Trip__c/listViews/TripList.listView-meta.xml
<ListView>
    <fullName>TripList</fullName>
    <columns>NAME</columns>
    <columns>Flight__c</columns>
    <columns>Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Trip List</label>
</ListView>